[BUGFIX] Language selector broken in iOS Safari (touch)
Due to the language selector relying on hover state for displaying,
it's not working on iOS Safari. This can be solved by using the pointer
cursor.

Releases: master, 1.2
Fixes: NEOS-971
Reviewed-on: http://review.typo3.org/36683
Tested-by: Aske Ertmann <aertmann@gmail.com>

--- a/Resources/Private/Styles/_Navigation.scss
+++ b/Resources/Private/Styles/_Navigation.scss
@@ -261,6 +261,7 @@ footer.navbar {
 	line-height: 46px;
 	position: relative;
 	z-index: 1001;
+	cursor: pointer;
 	@include font-bold;
 
 	div {
